--- a/pf/index.html
+++ b/pf/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Портфолио | El`ham </title>
+        <title>Портфолио | Dxrkd3v </title>
         <meta name="discription" content="Портфолио с работами">
         <link
             rel="stylesheet"
@@ -22,13 +22,13 @@
             <div class="col11 mxauto mt4">
                 <div class="flex align-center justify-center">
                     <a class="Logo no-underline" href="/">
-                        <div class="h2 serif bold black mb0">El`ham</div>
+                        <div class="h2 serif bold black mb0">Dxrkd3v</div>
                     </a>
                 </div>
                 <div class="mt4 h5 text-center">
                     <a href="/" class="gray no-underline inline-block mx2 mt1 md:mt0">Главная</a>
                     <a href="../pf/" class="gray no-underline inline-block mx2 mt1 md:mt0">Портфолио</a>
-                    <a class="gray no-underline inline-block mx2 mt1 md:mt0"  href="mailto:hi@elham.ru">Написать</a>
+                    <a class="gray no-underline inline-block mx2 mt1 md:mt0"  href="mailto:dxrkd3v@ro.ru">Написать</a>
                 </div>
             </div>
             <main class="col12 md:col8 lg:col6 mxauto mt5 pl2 pr2">
@@ -79,7 +79,7 @@
             <div class="mt4 h5 text-center">
                     <a href="/" class="gray no-underline inline-block mx2 mt1 md:mt0">Главная</a>
                     <a href="../pf/" class="gray no-underline inline-block mx2 mt1 md:mt0">Портфолио</a>
-                    <a class="gray no-underline inline-block mx2 mt1 md:mt0"  href="mailto:hi@elham.ru">Написать</a>
+                    <a class="gray no-underline inline-block mx2 mt1 md:mt0"  href="mailto:dxrkd3v@ro.ru">Написать</a>
             </div>
             <br>
             
