--- a/pf/lp1/index.html
+++ b/pf/lp1/index.html
@@ -18,7 +18,7 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="../lp1/assets/css/styles.css">
 
-        <title>Responsive clothing website - El`ham</title>
+        <title>Responsive clothing website - Dxrkd3v</title>
     </head>
     <body>
         <!--==================== HEADER ====================-->
