--- a/pf/lp2/index.html
+++ b/pf/lp2/index.html
@@ -13,7 +13,7 @@
       <!--=============== CSS ===============-->
       <link rel="stylesheet" href="/pf/lp2/assets/css/styles.css">
 
-      <title>Responsive bakery website - El`ham</title>
+      <title>Responsive bakery website - Dxrkd3v</title>
    </head>
    <body>
       <!--==================== HEADER ====================-->
