--- a/pf/index.html
+++ b/pf/index.html
@@ -41,8 +41,8 @@
                         <p>
                             Список моих работ. 
                         </p>
-                        <h4 class="mt2">Июнь 2024 </h4>
-                        <p style="padding-top: 20px;">
+                        <h4 class="mt2" style="padding-top: 20px;">Сентябрь 2024 </h4>
+                        <p>
                             Landing Page для пекарни от Bedimcode 😊 на HTML, CSS + JavaScript с адаптивной версткой
                             и анимацией. 
                         </p>
@@ -56,7 +56,8 @@
                         <p>
                             👉 <a href="../pf/lp2/" class="black" target="_blank">Моя верстка</a>
                         </p>
-                        <p style="padding-top: 50px;">
+                        <h4 class="mt2" style="padding-top: 20px;">Июнь 2024 </h4>
+                        <p>
                             Landing Page с одеждой от Bedimcode 😊 на HTML, CSS + JavaScript. 
                             Адаптивная версия под планшеты и мобильные устройства и слайдер на SwiperJS.
                         </p>
