--- a/pf/lp2/index.html
+++ b/pf/lp2/index.html
@@ -24,11 +24,11 @@
          <div class="nav__menu" id="nav-menu">
             <ul class="nav__list">
                <li class="nav__item">
-                  <a href="#home" class="nav__link">Home</a>
+                  <a href="#home" class="nav__link active-link">Home</a>
                </li>
 
                <li class="nav__item">
-                  <a href="#news" class="nav__link">News</a>
+                  <a href="#new" class="nav__link">New</a>
                </li>
 
                <li class="nav__item">
@@ -40,7 +40,7 @@
                </li>
 
                <li class="nav__item">
-                  <a href="#location" class="nav__link">Location</a>
+                  <a href="#visit" class="nav__link">Location</a>
                </li>
             </ul>
 
@@ -109,7 +109,7 @@
             <h2 class="section__title">New Breads</h2>
 
             <div class="new__container container grid">
-               <div class="new__container grid">
+               <div class="new__content grid">
                   <article class="new__card">
                      <div class="new__data">
                         <h2 class="new__title">Rye Bread</h2>
@@ -153,7 +153,7 @@
 
          <!--==================== ABOUT ====================-->
          <section class="about section" id="about">
-            <div class="abuot__container container grid">
+            <div class="about__container container grid">
                <div class="about__data">
                   <h2 class="section__title">About US</h2>
 
@@ -346,7 +346,7 @@
          </div>
 
          <span class="footer__copy">
-            &#169; All Rights Reserved By El'ham 
+            &#169; All Rights Reserved By Dxrkd3v 
          </span>
       </footer>
 
