Создал страницу с лекцией про добавление фонов в CSS

--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
                             Моя база знаний, которую я создаю изучая курсы по веб разработке, 
                             языков программирования и новых технологий. 
                         </p>
+                        <h4 class="mt2">Сентябрь 2024 </h4>
+                        <ul>
+                            <li class="mb0.5">
+                                <a href="../blog/zadanie-fona-v-css/" class="black">
+                                    Задание фона в CSS - Часть 1 
+                                </a>
+                            </li>
+                        </ul>
                         <h4 class="mt2">Июнь 2024 </h4>
                         <ul>
                             <li class="mb0.5">
