добавил в блог лекцию про форматы изображений

--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
                         <h4 class="mt2">Сентябрь 2024 </h4>
                         <ul>
                             <li class="mb0.5">
+                                <a href="../blog/zadanie-fona-v-css-2/" class="black">
+                                    Задание фона в CSS - Часть 2
+                                </a>
+                            </li>
+                        </ul>
+                        <ul>
+                            <li class="mb0.5">
                                 <a href="../blog/zadanie-fona-v-css/" class="black">
                                     Задание фона в CSS - Часть 1 
                                 </a>
