--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
+        <div class="author"> 
+            <a href="/">
+            <img class="author-avatar" src="../img/ava.jpeg">
+            </a>
+        </div>
         <div class="clearfix">
-            <div class="col11 mxauto mt4">
+            <div class="col11 mxauto">
                 <div class="flex align-center justify-center">
                     <a class="Logo no-underline" href="/">
                         <div class="h2 serif bold black mb0">Dxrkd3v</div>
@@ -28,6 +33,7 @@
                 <div class="mt4 h5 text-center">
                     <a href="/" class="gray no-underline inline-block mx2 mt1 md:mt0">Главная</a>
                     <a href="../pf/" class="gray no-underline inline-block mx2 mt1 md:mt0">Портфолио</a>
+                    <a href="/me/" class="gray no-underline inline-block mx2 mt1 md:mt0">Обо мне</a>
                     <a class="gray no-underline inline-block mx2 mt1 md:mt0"  href="mailto:dxrkd3v@ro.ru">Написать</a>
                 </div>
             </div>
@@ -42,7 +48,7 @@
                             Моя база знаний, которую я создаю изучая курсы по веб разработке, 
                             языков программирования и новых технологий. 
                         </p>
-                        <h4 class="mt2">Сентябрь 2024 </h4>
+                        <h3 class="mt2">Сентябрь 2024 </h3>
                         <ul>
                             <li class="mb0.5">
                                 <a href="../blog/zadanie-fona-v-css-2/" class="black">
@@ -57,7 +63,7 @@
                                 </a>
                             </li>
                         </ul>
-                        <h4 class="mt2">Июнь 2024 </h4>
+                        <h3 class="mt2">Июнь 2024 </h3>
                         <ul>
                             <li class="mb0.5">
                                 <a href="../blog/oformlenie-teksta-v-css/" class="black">
@@ -65,7 +71,7 @@
                                 </a>
                             </li>
                         </ul>
-                        <h4 class="mt2">Май 2024</h4>
+                        <h3 class="mt2">Май 2024</h3>
                         <ul>
                             <li class="mb0.5">
                                 <a href="../blog/operator-swith-case-javascript/" class="black">
@@ -79,7 +85,7 @@
                                 </a>
                             </li>
                         </ul>
-                        <h4 class="mt2">Март 2024</h4>
+                        <h3 class="mt2">Март 2024</h3>
                         <ul>
                             <li class="mb0.5">
                                 <a href="../blog/logicheskie-operatory-v-javascript/" class="black">
@@ -104,6 +110,7 @@
             <div class="mt4 h5 text-center">
                 <a href="/" class="gray no-underline inline-block mx2 mt1 md:mt0">Главная</a>
                 <a href="../pf/" class="gray no-underline inline-block mx2 mt1 md:mt0">Портфолио</a>
+                <a href="/me/" class="gray no-underline inline-block mx2 mt1 md:mt0">Обо мне</a>
                 <a class="gray no-underline inline-block mx2 mt1 md:mt0"  href="mailto:dxrkd3v@ro.ru">Написать</a>
             </div>
             <br>
