Лекция про основные команды Git

--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
                             Моя база знаний, которую я создаю изучая курсы по веб разработке, 
                             языков программирования и новых технологий. 
                         </p>
+                        <h3 class="mt2">Октябрь 2024</h3>
+                        <ul>
+                            <li class="mb0.5">
+                                <a href="../blog/comandy-dlya-raboty-v-git/" class="black">
+                                    Первоначальная настройка Git 
+                                </a>
+                            </li>
+                        </ul>
                         <h3 class="mt2">Сентябрь 2024 </h3>
                         <ul>
                             <li class="mb0.5">
