Добавил лекцию про работу с ветками в Git

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
                                     Первоначальная настройка Git 
                                 </a>
                             </li>
+                            <li class="mb0.5">
+                                <a href="../blog/rabota-s-vetkami-v-git/" class="black">Работа с ветками в Git</a>
+                            </li>
                         </ul>
                         <h3 class="mt2">Сентябрь 2024 </h3>
                         <ul>
@@ -63,8 +66,6 @@
                                     Задание фона в CSS - Часть 2
                                 </a>
                             </li>
-                        </ul>
-                        <ul>
                             <li class="mb0.5">
                                 <a href="../blog/zadanie-fona-v-css/" class="black">
                                     Задание фона в CSS - Часть 1 
