--- a/me/index.html
+++ b/me/index.html
@@ -70,7 +70,7 @@
                             разработчика в <a class="black" href="https://htmlacademy.ru/profession/frontender" target="_blank">HTMLAcademy</a>
                         </p>
                         <p>
-                            <strong>2022</strong>&nbsp; Начало обучения в <a class="black" href="https://synergy.ru" target="_blank">МФПУ Синергия</a> в 
+                            <strong>2022</strong>&nbsp; Начало обучения в <a class="black" href="https://synergy.ru" target="_blank">МФПУ Синергия</a> на 
                             факультете Кибербезопасности
                         </p>
                         <h3 class="mt2">Стажировка</h3>
