Начал проходить лекцию про css селекторы

--- a/me/index.html
+++ b/me/index.html
@@ -66,11 +66,11 @@
                         </p>
                         <h3 class="mt2" style="padding-top: 10px; padding-bottom: 0px;">Обучение</h3>
                         <p>
-                            <strong>2022</strong>&nbsp; Начало обучения на Frontend 
+                            <strong>2022 - февраль</strong>&nbsp; Начало обучения на Frontend 
                             разработчика в <a class="black" href="https://htmlacademy.ru/profession/frontender" target="_blank">HTMLAcademy</a>
                         </p>
                         <p>
-                            <strong>2022</strong>&nbsp; Начало обучения в <a class="black" href="https://synergy.ru" target="_blank">МФПУ Синергия</a> на 
+                            <strong>2022 - Январь</strong>&nbsp; Начало обучения в <a class="black" href="https://synergy.ru" target="_blank">МФПУ Синергия</a> на 
                             факультете Кибербезопасности
                         </p>
                         <h3 class="mt2">Стажировка</h3>
