Лекция про вложенность селекторов в CSS правилах

--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
                         <h3 class="mt2">Октябрь 2024</h3>
                         <ul>
                             <li class="mb0.5">
+                                <a href="../blog/vlojennost-selectorov-v-css/" class="black">
+                                    Вложенность селекторов в CSS правилах 
+                                </a>
+                            </li>
+                            <li class="mb0.5">
                                 <a href="../blog/selectory-v-css/" class="black">
                                     Введение в CSS. Селекторы. 
                                 </a>
