Лекция про типы значений в css правилах

--- a/me/index.html
+++ b/me/index.html
@@ -48,21 +48,21 @@
                         <p>
                             Привет, это Dxrkd3v  👋 
                         </p>
-                        <h3 class="mt2">Мои профили</h3>
+                        <h3 class="mt2" style="padding-top: 20px;">Мои профили</h3>
                         <p>
-                            Мои профили на обучающих платформах с ачивками
+                            Мои профили на обучающих платформах и не только
                         </p>
                         <p>
-                            👉 <a href="/" class="black"> GitHub</a>
+                            👉 <a href="/" class="black"> GitHub</a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;    <-- Исходники блога
                         </p>
                         <p>
-                            👉 <a href="/" class="black"> CodeWars</a>
+                            👉 <a href="/" class="black"> CodeWars</a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;   <-- 7 kyu 😅
                         </p>
                         <p>
-                            👉 <a href="/" class="black"> HTMLAcademy</a>
+                            👉 <a href="/" class="black"> HTMLAcademy</a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  <-- 300+ Задач
                         </p>
                         <p>
-                            👉 <a href="/" class="black"> Hexlet</a>
+                            👉 <a href="/" class="black"> Hexlet</a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                         </p>
                         <h3 class="mt2" style="padding-top: 10px; padding-bottom: 0px;">Обучение</h3>
                         <p>
@@ -72,6 +72,9 @@
                         <p>
                             <strong>2022 - Январь</strong>&nbsp; Начало обучения в <a class="black" href="https://synergy.ru" target="_blank">МФПУ Синергия</a> на 
                             факультете Кибербезопасности
+                        </p>
+                        <p>
+                            <strong>2021 - Январь</strong>&nbsp; Начало обучения на курсе по Frontend разработке на Udemy. Курс от Ивана Петриченко. До бана Udemy 🤷‍♂️ 
                         </p>
                         <h3 class="mt2">Стажировка</h3>
                         <p>
