Добавил раздел с полезными ссылками

--- a/me/index.html
+++ b/me/index.html
@@ -34,7 +34,7 @@
                     <a href="/" class="gray no-underline inline-block mx2 mt1 md:mt0">Главная</a>
                     <a href="../pf/" class="gray no-underline inline-block mx2 mt1 md:mt0">Портфолио</a>
                     <a href="/me/" class="gray no-underline inline-block mx2 mt1 md:mt0">Обо мне</a>
-                    <a class="gray no-underline inline-block mx2 mt1 md:mt0"  href="mailto:dxrkd3v@ro.ru">Написать</a>
+                    <a href="/link/" class="gray no-underline inline-block mx2 mt1 md:mt0">Полезное</a>
                 </div>
             </div>
             <main class="col12 md:col8 lg:col6 mxauto mt5 pl2 pr2">
@@ -74,7 +74,7 @@
                             факультете Кибербезопасности
                         </p>
                         <p>
-                            <strong>2021 - Январь</strong>&nbsp; Начало обучения на курсе по Frontend разработке на Udemy. Курс от Ивана Петриченко. До бана Udemy 🤷‍♂️ 
+                            <strong>2021 - Октябрь</strong>&nbsp; Начало обучения на курсе по Frontend разработке на Udemy 'JavaScript + React' от Ивана Петриченко.
                         </p>
                         <h3 class="mt2">Стажировка</h3>
                         <p>
@@ -94,7 +94,7 @@
                 <a href="/" class="gray no-underline inline-block mx2 mt1 md:mt0">Главная</a>
                 <a href="../pf/" class="gray no-underline inline-block mx2 mt1 md:mt0">Портфолио</a>
                 <a href="/me/" class="gray no-underline inline-block mx2 mt1 md:mt0">Обо мне</a>
-                <a class="gray no-underline inline-block mx2 mt1 md:mt0"  href="mailto:dxrkd3v@ro.ru">Написать</a>
+                <a href="/link/" class="gray no-underline inline-block mx2 mt1 md:mt0">Полезное</a>
             </div>
             <br>
             <br>
