--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 </div>
                 <div class="mt4 h5 text-center">
                     <a href="/" class="gray no-underline inline-block mx2 mt1 md:mt0">Главная</a>
-                    <a href="../pf/" class="gray no-underline inline-block mx2 mt1 md:mt0">Портфолио</a>
+                    <a href="/pf/" class="gray no-underline inline-block mx2 mt1 md:mt0">Портфолио</a>
                     <a href="/me/" class="gray no-underline inline-block mx2 mt1 md:mt0">Обо мне</a>
-                    <a class="gray no-underline inline-block mx2 mt1 md:mt0"  href="mailto:dxrkd3v@ro.ru">Написать</a>
+                    <a href="/link/" class="gray no-underline inline-block mx2 mt1 md:mt0">Полезное</a>
                 </div>
             </div>
             <main class="col12 md:col8 lg:col6 mxauto mt5 pl2 pr2">
@@ -138,9 +138,9 @@
             
             <div class="mt4 h5 text-center">
                 <a href="/" class="gray no-underline inline-block mx2 mt1 md:mt0">Главная</a>
-                <a href="../pf/" class="gray no-underline inline-block mx2 mt1 md:mt0">Портфолио</a>
+                <a href="/pf/" class="gray no-underline inline-block mx2 mt1 md:mt0">Портфолио</a>
                 <a href="/me/" class="gray no-underline inline-block mx2 mt1 md:mt0">Обо мне</a>
-                <a class="gray no-underline inline-block mx2 mt1 md:mt0"  href="mailto:dxrkd3v@ro.ru">Написать</a>
+                <a href="/link/" class="gray no-underline inline-block mx2 mt1 md:mt0">Полезное</a>
             </div>
             <br>
             <br>
