Отредактировал страницу обо мне

--- a/me/index.html
+++ b/me/index.html
@@ -66,15 +66,19 @@
                         </p>
                         <h3 class="mt2" style="padding-top: 10px; padding-bottom: 0px;">Обучение</h3>
                         <p>
-                            <strong>2022 - февраль</strong>&nbsp; Начало обучения на Frontend 
-                            разработчика в <a class="black" href="https://htmlacademy.ru/profession/frontender" target="_blank">HTMLAcademy</a>
+                            <strong>2024 - Октябрь</strong>&nbsp; Начало курса по Frontend 
+                            разработке в <a class="black" href="https://app.rs.school" target="_blank">RS Scholl</a>
                         </p>
                         <p>
-                            <strong>2022 - Январь</strong>&nbsp; Начало обучения в <a class="black" href="https://synergy.ru" target="_blank">МФПУ Синергия</a> на 
-                            факультете Кибербезопасности
+                            <strong>2022 - Февраль</strong>&nbsp; Начало курса по Frontend 
+                            разработке в <a class="black" href="https://htmlacademy.ru/profession/frontender" target="_blank">HTMLAcademy</a>
                         </p>
                         <p>
-                            <strong>2021 - Октябрь</strong>&nbsp; Начало обучения на курсе по Frontend разработке на Udemy 'JavaScript + React' от Ивана Петриченко.
+                            <strong>2022 - Январь</strong>&nbsp; Поступил в Университет <a class="black" href="https://synergy.ru" target="_blank">МФПУ Синергия</a> на 
+                            факультет Кибербезопасности
+                        </p>
+                        <p>
+                            <strong>2021 - Октябрь</strong>&nbsp; Начало курса по Frontend разработке на Udemy 'JavaScript + React' от Ивана Петриченко.
                         </p>
                         <h3 class="mt2">Стажировка</h3>
                         <p>
