--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
                         <h3 class="mt2">Октябрь 2024</h3>
                         <ul>
                             <li class="mb0.5">
+                                <a href="../blog/boxsovaya-model-v-css/" class="black">
+                                    Боксовая модель верстки или Box Model в CSS 
+                                </a>
+                            </li>
+                            <li class="mb0.5">
                                 <a href="../blog/edenitsy-izmereniy-v-css/" class="black">
                                     Единицы измерений в CSS - px, em, rem, fr и % 
                                 </a>
