Прошел лекцию про margin и padding в css

--- a/index.html
+++ b/index.html
@@ -51,8 +51,13 @@
                         <h3 class="mt2">Октябрь 2024</h3>
                         <ul>
                             <li class="mb0.5">
+                                <a href="../blog/margin-and-padding/" class="black">
+                                    Свойства Margin и Padding в CSS 
+                                </a>
+                            </li>
+                            <li class="mb0.5">
                                 <a href="../blog/boxsovaya-model-v-css/" class="black">
-                                    Боксовая модель верстки или Box Model в CSS 
+                                    Боксовая верстка или Box Modul в CSS 
                                 </a>
                             </li>
                             <li class="mb0.5">
