Прошел лекцию про Гриды на CSS

--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
                         <h3 class="mt2">Октябрь 2024</h3>
                         <ul>
                             <li class="mb0.5">
+                                <a href="../blog/vvedenie-v-grid-v-css/" class="black">
+                                    Введение в верстку на Grid в CSS. Gap, Row-Gap, Fr.
+                                </a>
+                            </li>
+                            <li class="mb0.5">
                                 <a href="../blog/margin-and-padding/" class="black">
                                     Свойства Margin и Padding в CSS 
                                 </a>
