Доработал сайт с кроссовками для порфолио

--- a/pf/lp3/index.html
+++ b/pf/lp3/index.html
@@ -11,10 +11,10 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css" crossorigin="">
 
       <!--=============== SWIPER CSS ===============-->
-      <link rel="stylesheet" href="">
+      <link rel="stylesheet" href="../lp3/assets/css/swiper-bundle.min.css">
 
       <!--=============== CSS ===============-->
-      <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+      <link rel="stylesheet" type="text/css"  href="assets/css/styles.css">
 
       <title>Responsive shoe website - Dxrkd3v</title>
    </head>
@@ -62,12 +62,63 @@
       <main>
          <!--==================== HOME ====================-->
          <section class="home">
-            
+            <div class="home__container container">
+               <div class="home__data">
+                  <h2 class="home__subtitle">Nike</h2>
+                  <h1 class="home__title">
+                     Lupitek <br>
+                     Flyknit <br>
+                     ACG
+                  </h1>
+                  <p class="home__description">
+                     Designed to withstand the rigors of adverse 
+                     conditions, the Nike ACC Flyknit Lupinek combines 
+                     flyknit, Flywire and a water-resistant Defender 
+                     Repellent system in the upper.
+                  </p>
+                  <a href="#" class="home__button">
+                     Buy now
+                  </a>
+               </div>
+               <div class="home__images">
+                  <div class="home__circle"></div>
+
+                  <div class="home__swiper swiper">
+                     <div class="swiper-wrapper ">
+                        <article class="home__article swiper-slide">
+                           <img src="../lp3/assets/img/shoe-1.png" alt="" class="home__shoe">
+                        </article>
+                        
+                        <article class="home__article swiper-slide">
+                           <img src="../lp3/assets/img/shoe-2.png" alt="" class="home__shoe">
+                        </article>
+
+                        <article class="home__article swiper-slide">
+                           <img src="../lp3/assets/img/shoe-3.png" alt="" class="home__shoe">
+                        </article> 
+                     </div>
+                  </div>
+                  <div class="swiper-pagination"></div>
+               </div>
+               <div class="home__social">
+                  <a href="#" class="home__social-link">
+                     <i class="ri-instagram-fill"></i>
+                  </a>
+
+                  <a href="#" class="home__social-link">
+                     <i class="ri-telegram-fill"></i>
+                  </a>
+
+                  <a href="#" class="home__social-link">
+                     <i class="ri-youtube-fill"></i>
+                  </a>
+               </div>
+            </div>
          </section>
       </main>
 
       <!--=============== SWIPER JS ===============-->
-      <script src=""></script>
+      <script src="../lp3/assets/js/swiper-bundle.min.js"></script>
 
       <!--=============== MAIN JS ===============-->
       <script src="assets/js/main.js"></script>
